# libofd

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: FindCairo.cmake  FindFontforge.cmake  FindHarfbuzz.cmake  FindLibSodium.cmake  FindLibUuid.cmake  FindLibXml2.cmake  FindMupdf.cmake  FindPoppler.cmake
data/: sample0.ofd  sample1.ofd
doc/GBT33190-2016/: Annotation.xsd  Annotations.xsd  Attachments.xsd  CustomTags.xsd  Definitions.xsd  Document.xsd  Extensions.xsd  OFD.xsd  Page.xsd  Res.xsd  Signature.xsd  Signatures.xsd  Version.xsd
doc/GBT33190-2016/Reference/: Annotation.h  Definitions.h  Document.h  GBT33190-2016.h  GraphicUnit.h  OFD.h  Page.h  Res.h  Signature.h  Version.h
include/: FontResource.h  OFDCairoRender.h  OFDCanvas.h  OFDColor.h  OFDCommon.h  OFDCompositeObject.h  OFDDocument.h  OFDFile.h  OFDFont.h  OFDImageObject.h  OFDObject.h  OFDPackage.h  OFDPage.h  OFDPathObject.h  OFDRender.h  OFDRes.h  OFDTextObject.h  OFDVideoObject.h  logger.h  ofd.h
include/ofd/: CairoRender.h  Color.h  Common.h  CompositeObject.h  Document.h  DrawState.h  Font.h  GlobalParams.h  Image.h  ImageMask.h  ImageObject.h  Layer.h  Object.h  OfdColor.h  OfdPath.h  Package.h  Page.h  PageBlock.h  Path.h  PathObject.h  Pattern.h  Render.h  Resource.h  Shading.h  Signature.h  TextObject.h  VideoObject.h
src/: CMakeLists.txt  FontResource.cxx  OFDCairoRender.cc  OFDCanvas.cxx  OFDCompositeObject.cc  OFDDocument.cc  OFDDocument.cxx  OFDFile.cc  OFDFile.cxx  OFDFont.cc  OFDImageObject.cc  OFDObject.cc  OFDObject.cxx  OFDPackage.cc  OFDPackage.cxx  OFDPage.cc  OFDPage.cxx  OFDPathObject.cc  OFDPathObject.cxx  OFDRender.cc  OFDRes.cc  OFDTextObject.cc  OFDTextObject.cxx  OFDVideoObject.cc  OfdPath.cc  freetype.cxx  logger.cc  logger.cxx  utils.cxx
src/ofd/: CairoRender.cc  CairoRender_Poppler.cc  CairoRescaleBox.h  Color.cc  CompositeObject.cc  Document.cc  Font.cc  GlobalParams.cc  Image.cc  ImageMask.cc  ImageObject.cc  Layer.cc  Object.cc  Package.cc  Page.cc  PageBlock.cc  Path.cc  PathObject.cc  Pattern.cc  Render.cc  Resource.cc  Shading.cc  Signature.cc  TextObject.cc  VideoObject.cc
standard/: OFDColor.h  OFDColorSpace.h  OFDDocument.cc  OFDDocument.h  OFDFont.cc  OFDFont.h  OFDObject.cc  OFDPackage.h  OFDPage.cc  OFDPage.h  OFDState.h  OfdColor.cc
tests/: CMakeLists.txt  PDFExtractor.cc  PDFExtractor.cxx  PDFExtractor.h  ofdtest.cxx  test_poppler.cc  test_poppler.cxx
tests/firsttest/: CMakeLists.txt  FontResource.cc  OFDCanvas.cc  OFDCanvas.h  OFDDocument.cc  OFDFont.h  OFDImage.cc  OFDImage.h  OFDImageObject.cc  OFDObject.cc  OFDPackage.cc  OFDPage.cc  OFDPathObject.cc  OFDPathObject.h  OFDTextObject.h  main.cc
tests/ofdtest/: CMakeLists.txt  PDFExtractor.cc  PDFExtractor.h  PDFFont.cc  PDFFont.h  freetype.cc  ofdtest.cc  test_freetype.cc  test_libofd.cc  test_mupdf.cc  test_poppler.cc  unicode.cc  unicode.h
tools/: CMakeLists.txt  build-fontforge.sh  build-poppler.sh  ofdviewer.cc  ofdviewer.cxx
tools/ofdviewer/: CMakeLists.txt  ofdviewer.cc
tools/pdf2ofd/: CMakeLists.txt  FontOutputDev.cc  FontOutputDev.h  FontOutputDev_font.cc  Gfx2Ofd.cc  Gfx2Ofd.h  OFDOutputDev.cc  OFDOutputDev.h  OFDOutputDev_DumpFont.cc  OFDOutputDev_ImageDrawing.cc  OFDOutputDev_InheritedFunctions.cc  OFDOutputDev_PageImage.cc  OFDOutputDev_PathDrawing.cc  OFDOutputDev_TextDrawing.cc  OFDOutputDev_TransparencyGroup.cc  OFDOutputDev_UpdateFont.cc  OFDOutputDev_UpdateState.cc  OFDOutputDev_utils.cc  Param.h  Preprocessor.cc  Preprocessor.h  TextOutputDev.cc  TextOutputDev.h  pdf2ofd.cc
utils/: CMakeLists.txt  StringFormatter.cc  StringFormatter.h  ffw.h  logger.cc  logger.h  tinyxml2.cc  tinyxml2.h  unicode.cc  unicode.h  utils.cc  utils.h  uuid.cc  uuid.h  xml.cc  xml.h  zip.cc  zip.h
