PROJECT(libofd)

CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

INCLUDE_DIRECTORIES(
    ./include
)

LINK_DIRECTORIES(
    /usr/local/lib
)

FIND_PACKAGE(FREETYPE REQUIRED)
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})

# -------- HarfBuzz --------
INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(PC_HARFBUZZ harfbuzz>=0.9.0)
FIND_PATH(HARFBUZZ_INCLUDE_DIRS NAMES hb.h
  HINTS ${PC_HARFBUZZ_INCLUDE_DIRS} ${PC_HARFBUZZ_INCLUDEDIR}
)

FIND_LIBRARY(HARFBUZZ_LIBRARIES NAMES harfbuzz
  HINTS ${PC_HARFBUZZ_LIBRARY_DIRS} ${PC_HARFBUZZ_LIBDIR}
)

INCLUDE(FindPackageHandleStandardArgs)
FIND_PACKAGE_HANDLE_STANDARD_ARGS(HarfBuzz DEFAULT_MSG HARFBUZZ_INCLUDE_DIRS HARFBUZZ_LIBRARIES)

INCLUDE_DIRECTORIES(${HARFBUZZ_INCLUDE_DIRS})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wno-c++11-extensions")
SET(LIBOFD_DEPENDICES ${FREETYPE_LIBRARIES} ${HARFBUZZ_LIBRARIES} harfbuzz-icu cairo tinyxml2 zip stdc++)

# -std=c++11
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# cmake policy CMP0042
# ``MACOSX_RPATH`` is enabled by default
SET(CMAKE_MACOSX_RPATH 0)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(tools)

ADD_TEST(ofdtest ${PROJECT_BINARY_DIR}/bin/ofdtest)
ENABLE_TESTING()
