PROJECT(libofd)

AUX_SOURCE_DIRECTORY(. LIBOFD_SRCS)

# -------- Poppler --------
FIND_PACKAGE(Poppler REQUIRED)
INCLUDE_DIRECTORIES(${POPPLER_INCLUDE_DIRS})

ADD_LIBRARY(ofd SHARED ${LIBOFD_SRCS})
SET_TARGET_PROPERTIES(ofd PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(ofd_static STATIC ${LIBOFD_SRCS})
SET_TARGET_PROPERTIES(ofd_static PROPERTIES OUTPUT_NAME "ofd")
SET_TARGET_PROPERTIES(ofd_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

TARGET_LINK_LIBRARIES(ofd ${LIBOFD_DEPENDICES} ${POPPLER_LIBRARY} utils)
TARGET_LINK_LIBRARIES(ofd_static ${LIBOFD_DEPENDICES} ${POPPLER_LIBRARY} )

INSTALL(TARGETS ofd_static
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)

