PROJECT(libofd)

AUX_SOURCE_DIRECTORY(. LIBUTILS_SRCS)

# -------- libxml2 --------
FIND_PACKAGE(LibXml2 REQUIRED)
INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})

ADD_LIBRARY(utils SHARED ${LIBUTILS_SRCS})
SET_TARGET_PROPERTIES(utils PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(utils_static STATIC ${LIBUTILS_SRCS})
SET_TARGET_PROPERTIES(utils_static PROPERTIES OUTPUT_NAME "utils")
SET_TARGET_PROPERTIES(utils_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

TARGET_LINK_LIBRARIES(utils ${LIBOFD_DEPENDICES} ${LIBXML2_LIBRARIES} tinyxml2)

INSTALL(TARGETS utils_static
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)

