PROJECT(libofd)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(ofdtest ${SRC_LIST})

# -------- Cairo --------
FIND_PACKAGE(Cairo REQUIRED)
INCLUDE_DIRECTORIES(${CAIRO_INCLUDE_DIRS})

# -------- Poppler --------
FIND_PACKAGE(Poppler REQUIRED)
INCLUDE_DIRECTORIES(${POPPLER_INCLUDE_DIRS})

FIND_PACKAGE(Mupdf REQUIRED)
INCLUDE_DIRECTORIES(${MUPDF_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(ofdtest ofd utils ${POPPLER_LIBRARY} ${MUPDF_LIBRARY} ${CAIRO_LIBRARIES} openjpeg)
