PROJECT(libofd)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(ofdviewer ${SRC_LIST})

# -------- SDL2 --------
INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REUIRED sdl2)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})

#FIND_PACKAGE(SDL2 REQUIRED)
#INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(ofdviewer ofd utils ${SDL2_LIBRARIES} SDL2_image )

