PROJECT(libofd)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(pdf2ofd ${SRC_LIST})

# -------- Poppler --------
FIND_PACKAGE(Poppler REQUIRED)
INCLUDE_DIRECTORIES(${POPPLER_INCLUDE_DIRS})

FIND_PACKAGE(GFlags REQUIRED)
INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(pdf2ofd ofd_static utils_static ${POPPLER_LIBRARIES})
