PROJECT(libofd)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(pdf2ofd ${SRC_LIST})

# -------- Cairo --------
FIND_PACKAGE(Cairo REQUIRED)
INCLUDE_DIRECTORIES(${CAIRO_INCLUDE_DIRS})

## -------- Poppler --------
#FIND_PACKAGE(Poppler REQUIRED)
#INCLUDE_DIRECTORIES(${POPPLER_INCLUDE_DIRS})

# -------- GFlags --------
FIND_PACKAGE(GFlags REQUIRED)
INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(pdf2ofd ofd utils ${FONTFORGE_LIBRARIES}  ${POPPLER_LIBRARIES} ${CAIRO_LIBRARIES} )
